tests/compilefail60.out
[1mtests/compilefail60.pas:11:14: [0m[1m[91merror:[0m Error D.7: Type Mismatch - real is not assignment compatible with parameter a of printint()
    11 | 	printint(3.78);